# stop_loss_prediction

./: .gitignore  README.md  hello.py  pyproject.toml
ml/: predict_stop_loss.ipynb  predict_stop_loss_pytorch.ipynb
ml/data/: nepsealpha_export_price_NTC_2021-01-03_2026-01-03_unadjusted.csv
model/: scaler.npz
