[project]
name = "stop-loss-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "tensorflow[and-cuda]>=2.20.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "utilsforecast>=0.2.15",
]
